# markdown-beauty

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/: sample.md
scripts/: build-release.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/chat/: chat-panel.tsx  matrix-loader.tsx  message.tsx  prompt-input.tsx
src/components/base/badges/: badges.tsx
src/components/base/buttons/: close-button.tsx  utility-button.tsx
src/components/base/checkbox/: checkbox.tsx
src/components/base/input/: helper-text.tsx
src/components/foundations/logo/: hellomatik-logo.tsx
src/markdown/: callout.tsx  code-block.tsx  editor-view.tsx  frontmatter.tsx  markdown-renderer.tsx  markdown-table.tsx  mermaid-diagram.tsx  text-utils.ts  use-doc-search.ts
src/shims/: next-image.tsx
src/styles/: globals.css  theme.css
