[package]
name = "markdown-beauty"
version = "1.2.0"
description = "Visor de Markdown precioso con Hellomatik UI"
authors = ["Hellomatik"]
edition = "2021"

[lib]
name = "markdown_beauty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
